rewritten to work

--- a/scripts/ngsFST.conf
+++ b/scripts/ngsFST.conf
@@ -1,15 +1,24 @@
+#   NOTE: configured for use in conjunction with ANGSD_2DSFS.sh
+#   If you haven't run that yet, run that first
+#   If you already have run ANGSD to obtain a 2DSFS, 
+#   make sure you have these files named in this way:
+#   POP1_SFS=${RESULTS_DIR}/${TAXON1}_Intergenic_Conditioned
+#   POP2_SFS=${RESULTS_DIR}/${TAXON2}_Intergenic_Conditioned
+#   INTERSECT=${RESULTS_DIR}/intersect.${TAXON1}.${TAXON2}_intergenic.txt
+#   2DSFS=${RESULTS_DIR}/2DSFS_Intergenic.${TAXON1}.${TAXON2}.sfs
+
+#   You will already have these if you run ANGSD_2DSFS.sh beforehand
+
 #   ngsFST specific configuration variables go in this file.
 #   common configuration variables are in common.conf
 
 #   If you would like to change the default parameters of the analysis,
 #   you may declare the appropriate variables below.
-#   See NGSPOPGEN_NGSFST.sh for all possible parameters and their defaults
+#   See NGS_FST.sh for all possible parameters and their defaults
 
-OUTPUT=og
-POP1_SFS=results/og_allopatric_SFSOut.saf
-POP2_SFS=results/og_SFSOut.saf
-TAXON1=og_allopatric
-TAXON2=og_sympatric
-ANC_SEQ=
+#   Make sure your taxa are in the same order as they were in ANGSD_2DSFS.sh
+
+TAXON1=allo
+TAXON2=symp
 BLOCK_SIZE=20000
-IS_LOG=1
+N_CORES=16
